test: `String.format` -> `formatted` 수정